aggressive AI dies and works nice

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,17 +150,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/AI/BTS_VisionCheck.BTS_VisionCheck
-OpenAssetsAtExit=/Game/AI/MoveToPlayer.MoveToPlayer
-OpenAssetsAtExit=/Game/AI/SetSpeedAndFocus.SetSpeedAndFocus
-OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Ethan/BPs/Ramp.Ramp
-OpenAssetsAtExit=/Game/Ethan/BPs/Arch.Arch
-OpenAssetsAtExit=/Game/Lennon/Enivornment/Pyramid.Pyramid
-OpenAssetsAtExit=/Game/Ethan/BPs/Pyramid.Pyramid
+CleanShutdown=False
 OpenAssetsAtExit=/Game/AI/Aggressive_AI.Aggressive_AI
-OpenAssetsAtExit=/Game/Ethan/BPs/EnemyBullet.EnemyBullet
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=155.000
@@ -895,26 +886,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Ethan/BPs/EnemyBullet
-MRUItem1=/Game/AI/Aggressive_AI
-MRUItem2=/Game/Lennon/Enivornment/Pyramid
-MRUItem3=/Game/Ethan/BPs/Pyramid
-MRUItem4=/Game/Ethan/BPs/Arch
-MRUItem5=/Game/Ethan/BPs/Ramp
-MRUItem6=/Game/AI/MoveToPlayer_New
-MRUItem7=/Game/PlayerCharacter
-MRUItem8=/Game/AI/SetSpeedAndFocus
-MRUItem9=/Game/AI/MoveToPlayer
-MRUItem10=/Game/AI/BTS_VisionCheck
-MRUItem11=/Game/AI/NPC_BT
-MRUItem12=/Game/Ethan/BPs/Missile
-MRUItem13=/Game/Prototype/Arena
-MRUItem14=/Game/NextLevel
-MRUItem15=/Game/Lennon/Enemy/ENEMY_AI
-MRUItem16=/Game/Arena2
-MRUItem17=/Game/Blueprints/NewPawn
-MRUItem18=/Game/Hasiel/NewMap
-MRUItem19=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/AI/Aggressive_AI
+MRUItem1=/Game/Lennon/Enemy/enemyAI
+MRUItem2=/Game/Prototype/Arena
+MRUItem3=/Game/NextLevel
+MRUItem4=/Game/Ethan/BPs/EnemyBullet
+MRUItem5=/Game/Lennon/Enivornment/Pyramid
+MRUItem6=/Game/Ethan/BPs/Pyramid
+MRUItem7=/Game/Ethan/BPs/Arch
+MRUItem8=/Game/Ethan/BPs/Ramp
+MRUItem9=/Game/AI/MoveToPlayer_New
+MRUItem10=/Game/PlayerCharacter
+MRUItem11=/Game/AI/SetSpeedAndFocus
+MRUItem12=/Game/AI/MoveToPlayer
+MRUItem13=/Game/AI/BTS_VisionCheck
+MRUItem14=/Game/AI/NPC_BT
+MRUItem15=/Game/Ethan/BPs/Missile
+MRUItem16=/Game/Lennon/Enemy/ENEMY_AI
+MRUItem17=/Game/Arena2
+MRUItem18=/Game/Blueprints/NewPawn
+MRUItem19=/Game/Hasiel/NewMap
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -3136,10 +3127,10 @@ K2Node_VariableGet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LO
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 PlayerCharacter_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
-K2Node_VariableSet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.Collision.Collision,
 FloatProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
-IntProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
+IntProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
 M_GunBullet_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 Ramp_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 ObstacleSpawner_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
@@ -3155,6 +3146,7 @@ ObjectProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,EN
 ArrayProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
 ParticleSystemComponent=ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,
+Aggressive_AI_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.AutoComplete.ManualAutoCompleteList\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[0]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[1]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[2]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[3]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[4]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[5]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[6]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[7]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[8]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[9]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[10]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[11]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[12]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[13]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[14]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[15]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[16]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[17]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[18]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[19]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[20]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[21]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[22]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[23]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[24]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[25]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[26]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[27]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[28]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[29]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[30]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[31]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[32]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[33]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[34]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[35]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[36]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[37]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[38]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[39]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[40]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[41]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[42]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[43]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[44]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[45]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[46]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[47]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[48]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[49]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[50]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[51]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[52]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[53]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[54]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[55]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[56]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[57]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[58]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[59]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[60]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[61]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[62]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[63]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[64]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[65]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[66]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[67]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[68]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[69]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[70]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[71]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[72]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[73]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[74]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[75]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[76]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[77]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[78]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[79]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[80]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[81]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[82]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[83]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[84]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[85]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[86]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[87]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[88]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[89]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[90]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[91]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[92]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[93]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[94]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[95]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[96]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[97]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[98]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[99]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[100]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[101]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[102]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[103]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[104]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[105]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[106]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[107]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[108]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[109]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[110]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[111]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[112]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[113]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[114]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[115]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[116]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[117]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[118]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[119]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[120]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[121]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[122]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[123]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[124]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[125]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[126]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[127]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[128]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[129]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[130]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[131]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[132]\" \"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
@@ -3181,8 +3173,8 @@ ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstanc
 DirectionalLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 PlayerCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Replication.ReplicatedMovement\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Replication.ReplicatedMovement\" "
+Character=
+Pawn=
 REINST_PlayerCharacter_C_136="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_144="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_152="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3268,7 +3260,7 @@ PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent=
 REINST_ENEMY_AI_C_950="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Aggressive_AI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Replication.ReplicatedMovement\" "
+Aggressive_AI_C=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 AnimationSettings="\"Object.Compression.KeyEndEffectorsMatchNameArray\" "
 AudioSettings="\"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
