making levels for tournament mode
made all levels so when u select a character you get to the right level

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -111,14 +111,18 @@ SnapScaleEnabled=False
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Prototype/Arena
-MRUItem1=/Game/MainMenu
-MRUItem2=/Game/NextLevel
-MRUItem3=/Game/Arena2
-MRUItem4=/Game/Maps/NextLevel2
-MRUItem5=/Game/Hasiel/NewMap
-MRUItem6=/Game/StarterContent/Maps/StarterMap
-MRUItem7=/Game/FlyingExampleMap
+MRUItem0=/Game/Levels/Arena
+MRUItem1=/Game/Levels/LastLevel
+MRUItem2=/Game/Scot/Scotts_UI/NewMenu
+MRUItem3=/Game/MainMenu
+MRUItem4=/Game/Prototype/LastLevel
+MRUItem5=/Game/NextLevel
+MRUItem6=/Game/Maps/NextLevel2
+MRUItem7=/Game/Prototype/Arena
+MRUItem8=/Game/Arena2
+MRUItem9=/Game/Hasiel/NewMap
+MRUItem10=/Game/StarterContent/Maps/StarterMap
+MRUItem11=/Game/FlyingExampleMap
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -147,15 +151,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Prototype/Arena
+LastLevel=/Game/Levels/Arena
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Lennon/Enemy/ENEMY_AI.ENEMY_AI
-OpenAssetsAtExit=/Game/Lennon/Collectibles/Shield.Shield
-OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Lennon/Collectibles/SpeedBoost.SpeedBoost
-OpenAssetsAtExit=/Game/Lennon/BlueCharacter/BlueCharacter.BlueCharacter
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Scot/Scotts_UI/CharSelect_WG.CharSelect_WG
+OpenAssetsAtExit=/Game/Scot/Scotts_UI/NewMenu_WG.NewMenu_WG
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=155.000
@@ -890,26 +891,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Prototype/Arena
-MRUItem1=/Game/MainMenu
-MRUItem2=/Game/Lennon/BlueCharacter/BlueCharacter
-MRUItem3=/Game/Lennon/Collectibles/SpeedBoost
-MRUItem4=/Game/Lennon/Collectibles/Shield
-MRUItem5=/Game/PlayerCharacter
-MRUItem6=/Game/Lennon/Enemy/ENEMY_AI
-MRUItem7=/Game/AI/Aggressive_AI
-MRUItem8=/Game/Lennon/Collectibles/CoffeeCoin
-MRUItem9=/Game/Lennon/Enemy/enemyAI
-MRUItem10=/Game/NextLevel
-MRUItem11=/Game/Ethan/BPs/EnemyBullet
-MRUItem12=/Game/Lennon/Enivornment/Pyramid
-MRUItem13=/Game/Ethan/BPs/Pyramid
-MRUItem14=/Game/Ethan/BPs/Arch
-MRUItem15=/Game/Ethan/BPs/Ramp
-MRUItem16=/Game/AI/MoveToPlayer_New
-MRUItem17=/Game/AI/SetSpeedAndFocus
-MRUItem18=/Game/AI/MoveToPlayer
-MRUItem19=/Game/AI/BTS_VisionCheck
+MRUItem0=/Game/Levels/Arena
+MRUItem1=/Game/Levels/LastLevel
+MRUItem2=/Game/Scot/Scotts_UI/NewMenu
+MRUItem3=/Game/MainMenu
+MRUItem4=/Game/Lennon/RedCharacter/ShipWithShield
+MRUItem5=/Game/Prototype/LastLevel
+MRUItem6=/Game/NextLevel
+MRUItem7=/Game/Maps/NextLevel2
+MRUItem8=/Game/Prototype/Arena
+MRUItem9=/Game/Scot/Scotts_UI/CharSelect_WG
+MRUItem10=/Game/Scot/Scotts_UI/Enemy_Trace_WG
+MRUItem11=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem12=/Game/Scot/Scotts_UI/NewMenu_WG
+MRUItem13=/Game/Main_Menu
+MRUItem14=/Game/Lennon/BlueCharacter/BlueCharacter
+MRUItem15=/Game/Lennon/Collectibles/SpeedBoost
+MRUItem16=/Game/Lennon/Collectibles/Shield
+MRUItem17=/Game/PlayerCharacter
+MRUItem18=/Game/Lennon/Enemy/ENEMY_AI
+MRUItem19=/Game/AI/Aggressive_AI
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -2994,12 +2995,59 @@ BlueCharacter_C.Rendering=True
 BlueCharacter_C.Replication=True
 BlueCharacter_C.Input=True
 BlueCharacter_C.Actor=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+Main_Menu_C.Appearance=True
+Main_Menu_C.Input=True
+Main_Menu_C.Interaction=True
+Main_Menu_C.Behavior=True
+Main_Menu_C.Render Transform=True
+Main_Menu_C.Performance=True
+Main_Menu_C.Clipping=True
+Main_Menu_C.Navigation=True
+Main_Menu_C.Designer=True
+Main_Menu_C.Layout=True
+BlueCharacter_C.TransformCommon=True
+BlueCharacter_C.Animation=True
+BlueCharacter_C.Mesh=True
+BlueCharacter_C.Physics=True
+BlueCharacter_C.Clothing=True
+BlueCharacter_C.Collision=True
+BlueCharacter_C.Lighting=True
+BlueCharacter_C.ClothingSimulation=True
+BlueCharacter_C.Tags=True
+BlueCharacter_C.Activation=True
+BlueCharacter_C.Cooking=True
+BlueCharacter_C.Character Movement (General Settings)=True
+BlueCharacter_C.Character Movement: Walking=True
+BlueCharacter_C.Character Movement: Jumping / Falling=True
+BlueCharacter_C.Character Movement (Networking)=True
+BlueCharacter_C.Character Movement: Swimming=True
+BlueCharacter_C.Character Movement: Flying=True
+BlueCharacter_C.Character Movement: Custom Movement=True
+BlueCharacter_C.Character Movement (Rotation Settings)=True
+BlueCharacter_C.Character Movement: Physics Interaction=True
+BlueCharacter_C.Character Movement=True
+BlueCharacter_C.Character Movement: Avoidance=True
+BlueCharacter_C.RootMotion=True
+BlueCharacter_C.Character Movement: NavMesh Movement=True
+BlueCharacter_C.NavMovement=True
+BlueCharacter_C.Velocity=True
+BlueCharacter_C.PlanarMovement=True
+BlueCharacter_C.MovementComponent=True
+BlueCharacter_C.Shape=True
+BlueCharacter_C.Navigation=True
+TextBlock.Localization=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=0
-/Game/Scot/Scotts_UI/Enemy_Trace_WG.Enemy_Trace_WG=1
-/Game/Scot/Scotts_UI/HUD_WG.HUD_WG=1
-/Game/Main_Menu.Main_Menu=1
+/Game/Scot/Scotts_UI/Enemy_Trace_WG.Enemy_Trace_WG=0
+/Game/Scot/Scotts_UI/HUD_WG.HUD_WG=0
+/Game/Main_Menu.Main_Menu=0
 /Game/Scot/Scotts_UI/Menus/MainMenu_WG.MainMenu_WG=1
 /Game/Scot/Scotts_UI/Menus/CharaterSelect_WG.CharaterSelect_WG=1
 /Game/Scot/Scotts_UI/Menus/Highscores_WG.Highscores_WG=1
@@ -3045,8 +3093,13 @@ BlueCharacter_C.Actor=True
 /Game/Lennon/Collectibles/CoffeeCoin.CoffeeCoin=1
 /Game/Lennon/Collectibles/SpeedBoost.SpeedBoost=1
 /Game/AI/Aggressive_AI.Aggressive_AI=0
+/Game/Lennon/RedCharacter/ShipWithShield.ShipWithShield=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/PlayerCharacter.PlayerCharacter;
+RecentlyPlaced=/Game/Lennon/RedCharacter/ShipWithShield.ShipWithShield;
+RecentlyPlaced=/Game/Lennon/BlueCharacter/BlueCharacter.BlueCharacter;
+RecentlyPlaced=/Game/Lennon/GreenCharacter/TestNewShip.TestNewShip;
 RecentlyPlaced=/Game/Lennon/Collectibles/Shield.Shield;
 RecentlyPlaced=/Game/Lennon/Collectibles/SpeedBoost.SpeedBoost;
 RecentlyPlaced=/Game/AI/Aggressive_AI.Aggressive_AI;
@@ -3063,10 +3116,6 @@ RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Ethan/FakeAds/Broccoli_milk.Broccoli_milk;
 RecentlyPlaced=/Game/Ethan/FakeAds/MeatCube.MeatCube;
-RecentlyPlaced=/Game/Ethan/FakeAds/cheese_and_Onion_crisp.cheese_and_Onion_crisp;
-RecentlyPlaced=/Game/Ethan/FakeAds/Tinned_Fitness.Tinned_Fitness;
-RecentlyPlaced=/Game/Ethan/FakeAds/Recycle_The_Elderly.Recycle_The_Elderly;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MessageLog]
 LastLogListing=EditorErrors
@@ -3179,6 +3228,8 @@ ArrayProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENE
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
 ParticleSystemComponent=ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,
 Aggressive_AI_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
+CharSelect_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
+NewMenu_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.AutoComplete.ManualAutoCompleteList\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[0]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[1]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[2]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[3]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[4]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[5]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[6]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[7]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[8]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[9]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[10]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[11]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[12]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[13]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[14]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[15]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[16]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[17]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[18]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[19]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[20]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[21]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[22]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[23]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[24]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[25]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[26]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[27]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[28]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[29]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[30]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[31]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[32]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[33]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[34]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[35]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[36]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[37]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[38]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[39]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[40]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[41]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[42]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[43]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[44]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[45]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[46]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[47]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[48]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[49]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[50]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[51]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[52]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[53]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[54]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[55]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[56]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[57]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[58]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[59]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[60]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[61]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[62]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[63]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[64]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[65]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[66]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[67]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[68]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[69]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[70]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[71]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[72]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[73]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[74]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[75]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[76]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[77]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[78]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[79]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[80]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[81]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[82]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[83]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[84]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[85]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[86]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[87]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[88]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[89]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[90]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[91]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[92]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[93]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[94]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[95]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[96]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[97]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[98]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[99]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[100]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[101]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[102]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[103]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[104]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[105]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[106]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[107]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[108]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[109]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[110]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[111]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[112]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[113]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[114]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[115]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[116]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[117]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[118]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[119]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[120]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[121]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[122]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[123]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[124]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[125]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[126]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[127]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[128]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[129]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[130]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[131]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[132]\" \"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
